# dearplant

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  celery_config.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/middleware/: __init__.py  authentication.py  cors.py  error_handling.py  localization.py  logging.py  rate_limiting.py
app/api/v1/: __init__.py  health.py  router.py
app/modules/user_management/: __init__.py
app/modules/user_management/application/: __init__.py
app/modules/user_management/application/commands/: __init__.py  create_user.py  delete_user.py  update_profile.py
app/modules/user_management/application/dto/: __init__.py  profile_dto.py  user_dto.py
app/modules/user_management/application/handlers/: __init__.py  command_handlers.py  query_handlers.py
app/modules/user_management/application/queries/: __init__.py  get_profile.py  get_user.py
app/modules/user_management/domain/: __init__.py
app/modules/user_management/domain/events/: __init__.py  handlers.py  user_events.py
app/modules/user_management/domain/models/: __init__.py  profile.py  subscription.py  user.py
app/modules/user_management/domain/repositories/: __init__.py  profile_repository.py  subscription_repository.py  user_repository.py
app/modules/user_management/domain/services/: __init__.py  auth_service.py  profile_service.py  user_service.py
app/modules/user_management/infrastructure/: __init__.py
app/modules/user_management/infrastructure/database/: __init__.py  models.py  profile_repository_impl.py  subscription_repository_impl.py  user_repository_impl.py
app/modules/user_management/presentation/: __init__.py  dependencies.py
app/modules/user_management/presentation/api/: __init__.py
app/modules/user_management/presentation/api/schemas/: __init__.py  auth_schemas.py  profile_schemas.py  user_schemas.py
app/modules/user_management/presentation/api/v1/: __init__.py  auth.py  profiles.py  users.py
app/shared/: __init__.py
app/shared/config/: __init__.py  database.py  redis.py  settings.py  supabase.py
app/shared/core/: __init__.py  circuit_breaker.py  dependencies.py  event_bus.py  exceptions.py  middleware.py  rate_limiter.py  security.py
app/shared/events/: __init__.py  base.py  handlers.py  publisher.py
app/shared/infrastructure/: __init__.py
app/shared/infrastructure/database/: connection.py  session.py
app/shared/infrastructure/external_apis/: __init__.py  api_client.py  api_rotation.py  circuit_breaker.py
app/shared/infrastructure/storage/: __init__.py  file_manager.py  supabase_storage.py
app/shared/utils/: __init__.py  formatters.py  helpers.py  logging.py  validators.py
menv/: pyvenv.cfg
migrations/: env.py
migrations/versions/: 001_initial_tables.py
